--- a/content/popup.html
+++ b/content/popup.html
@@ -4,6 +4,8 @@
         <p>Popup content</p>
         <button id="enableGriffinBtn">Enable griffin</button>
         <button id="disableGriffinBtn">Disable griffin</button>
+        <button id="switchGriffinBtn">Switch Video</button>
         <script src="../scripts/popup.js"></script>
+        <!-- <script src="../scripts/content.js"></script> -->
     </body>
 </html>
