--- a/content/popup.html
+++ b/content/popup.html
@@ -1,10 +1,23 @@
 <html>
-    <body>
-        <h1>Popup</h1>
-        <p>Popup content</p>
-        <button id="enableGriffinBtn">Enable griffin</button>
-        <button id="disableGriffinBtn">Disable griffin</button>
-        <button id="switchGriffinBtn">Switch Video</button>
+    <head>
+        <link rel="stylesheet" href="./styles/main.css">
+    </head>
+    <body class="main">
+        <div class="top">
+            <h1 class="title">Peter Focus</h1>
+            <img src="../images/logo@32px.png">
+        </div>
+        
+        <div class="dual">
+            <div class="peter">
+                <img src="../images/peter.png" alt="peter">
+            </div>
+            <div class="buttons">
+                <button id="enableGriffinBtn">enable griffin</button>
+                <button id="disableGriffinBtn">disable griffin</button>
+                <button id="switchGriffinBtn">switch video</button>
+            </div>
+        </div>
         <script src="../scripts/popup.js"></script>
         <!-- <script src="../scripts/content.js"></script> -->
     </body>
