--- a/content/popup.html
+++ b/content/popup.html
@@ -16,6 +16,9 @@
                 <button id="enableGriffinBtn">enable griffin</button>
                 <button id="disableGriffinBtn">disable griffin</button>
                 <button id="switchGriffinBtn">switch video</button>
+                <div class="selections">
+
+                </div>
             </div>
         </div>
         <script src="../scripts/popup.js"></script>
