--- a/content/popup.html
+++ b/content/popup.html
@@ -17,7 +17,11 @@
                 <button id="disableGriffinBtn">disable griffin</button>
                 <button id="switchGriffinBtn">switch video</button>
                 <div class="selections">
-
+                    <div class="">Peter</div>
+                    <div class="">Kinetic Sand</div>
+                    <div class="">Minecraft Parkour</div>
+                    <div class="">Subway Surfers</div>
+                    <div class="">Snake Game</div>
                 </div>
             </div>
         </div>
