--- a/content/popup.html
+++ b/content/popup.html
@@ -17,11 +17,12 @@
                 <button id="disableGriffinBtn">disable griffin</button>
                 <button id="switchGriffinBtn">switch video</button>
                 <div class="selections">
-                    <div class="">Peter</div>
-                    <div class="">Kinetic Sand</div>
-                    <div class="">Minecraft Parkour</div>
-                    <div class="">Subway Surfers</div>
-                    <div class="">Snake Game</div>
+                    <div class="item"><img src="../images/peter-tv.png"/></div>
+                    <div class="item"><img src="../images/sand.png"/></div>
+                    <div class="item"><img src="../images/minecraft.png"/></div>
+                    <div class="item"><img src="../images/subway.png"/></div>
+                    <div class="item"><img src="../images/hydraulic.png"/></div>
+                    <div class="item"><img src="../images/purple.jpg"/></div>
                 </div>
             </div>
         </div>
