--- a/content/popup.html
+++ b/content/popup.html
@@ -17,12 +17,12 @@
                 <button id="disableGriffinBtn">disable griffin</button>
                 <button id="switchGriffinBtn">switch video</button>
                 <div class="selections">
-                    <div class="item"><img src="../images/peter-tv.png"/></div>
-                    <div class="item"><img src="../images/sand.png"/></div>
-                    <div class="item"><img src="../images/minecraft.png"/></div>
-                    <div class="item"><img src="../images/subway.png"/></div>
-                    <div class="item"><img src="../images/hydraulic.png"/></div>
-                    <div class="item"><img src="../images/purple.jpg"/></div>
+                    <div class="item" id="tv"><img src="../images/peter-tv.png"/></div>
+                    <div class="item" id="sand"><img src="../images/sand.png"/></div>
+                    <div class="item" id="minecraft"><img src="../images/minecraft.png"/></div>
+                    <div class="item" id="subway"><img src="../images/subway.png"/></div>
+                    <div class="item" id="hydraulic"><img src="../images/hydraulic.png"/></div>
+                    <div class="item" id="purple"><img src="../images/purple.jpg"/></div>
                 </div>
             </div>
         </div>
